--- a/email-template-showcase.html
+++ b/email-template-showcase.html
@@ -345,7 +345,7 @@
                         
                         <!-- Dark Content Area -->
                         <div style="padding: 30px 25px; background-color: #1a1a1a; color: #fff; min-height: 400px;">
-                            <h2 style="color: #fff; margin-top: 0; font-size: 18px; font-weight: normal;">Hello Shim,</h2>
+                            <h2 style="color: #fff; margin-top: 0; font-size: 18px; font-weight: normal;">Hello</h2>
                             
                             <p style="font-size: 14px; color: #b0b0b0; line-height: 1.6; margin: 20px 0;">
                                 There is an incoming deposit to your Skrill account. However, before the processing of the transfer can be completed, verification needs to be performed.
