--- a/email-template-showcase.html
+++ b/email-template-showcase.html
@@ -210,8 +210,8 @@
             'PHP': '₱',
             'NGN': '₦',
             'BTC': '₿',
-            'ETH': 'Ξ',
-            'USDT': '₮'
+            'ETH': 'eth',
+            'USDT': 'usdt'
         };
 
         function getCurrencySymbol(currency) {
