--- a/email-template-showcase.html
+++ b/email-template-showcase.html
@@ -209,9 +209,9 @@
             'INR': '₹',
             'PHP': '₱',
             'NGN': '₦',
-            'BTC': '₿',
-            'ETH': 'eth',
-            'USDT': 'usdt'
+            'BTC': 'BTC',
+            'ETH': 'ETH',
+            'USDT': 'USDT'
         };
 
         function getCurrencySymbol(currency) {
