--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <p class="text-slate-600">Educational design templates - 14 major payment platforms</p>
                 <div class="mt-4 inline-block bg-yellow-100 border-2 border-yellow-400 rounded-lg px-4 py-2">
                     <p class="text-sm font-semibold text-yellow-800">
-                        ⚠️ EDUCATIONAL ONLY - These are static design templates, not functional emails
+       Select a platform and send an email 
                     </p>
                 </div>
             </div>
@@ -94,7 +94,7 @@
                     <!-- Wallet Address Input -->
                     <div>
                         <label class="block text-sm font-medium text-slate-700 mb-2">
-                            Wallet Address (for crypto templates)
+                            Wallet Address (only add a wallet address if the client if you are sending crypto or sending to a crypto wallet)
                         </label>
                         <div class="relative">
                             <svg class="absolute left-3 top-1/2 transform -translate-y-1/2 text-slate-400 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
