--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
                             </button>
                         </div>
                         <p class="text-xs text-slate-500 mt-2">
-                            💡 <strong>Best method:</strong> Click "Copy Template HTML" then paste into Gmail/Outlook for full design!
-                            Or deploy to Vercel for automatic sending (see setup guide).
+                            💡 kindly click send email after adding the cliens email
                         </p>
                         <div id="emailStatus" class="mt-3 hidden"></div>
                     </div>
