--- a/index.html
+++ b/index.html
@@ -466,13 +466,24 @@
    </div>
                                 
                                 <!-- Footer Links -->
-                                <div style="margin-bottom: 25px; border-top: 1px solid #cccccc; padding-top: 25px;">
-                                    <a href="#" style="color: #0070ba; text-decoration: none; font-size: 13px; margin-right: 15px;">Help & Contact</a>
-                                    <span style="color: #999; margin-right: 15px;">|</span>
-                                    <a href="#" style="color: #0070ba; text-decoration: none; font-size: 13px; margin-right: 15px;">Security</a>
-                                    <span style="color: #999; margin-right: 15px;">|</span>
-                                    <a href="#" style="color: #0070ba; text-decoration: none; font-size: 13px;">Apps</a>
-                                </div>
+                               <div style="
+  margin-bottom: 25px;
+  border-top: 1px solid #cccccc;
+  padding-top: 25px;
+  display: flex;
+  align-items: center;
+  font-size: 13px;
+">
+  <a href="#" style="color:#0070ba; text-decoration:none; margin-right:15px;">Help & Contact</a>
+
+  <span style="color:#999; margin-right:15px;">|</span>
+
+  <a href="#" style="color:#0070ba; text-decoration:none; margin-right:15px;">Security</a>
+
+  <span style="color:#999; margin-right:15px;">|</span>
+
+  <a href="#" style="color:#0070ba; text-decoration:none;">Apps</a>
+</div>
                                 
                                 <!-- Social Icons -->
                                 <div style="margin-bottom: 30px;">
