--- a/index.html
+++ b/index.html
@@ -466,24 +466,35 @@
    </div>
                                 
                                 <!-- Footer Links -->
-                               <div style="
-  margin-bottom: 25px;
-  border-top: 1px solid #cccccc;
-  padding-top: 25px;
-  display: flex;
-  align-items: center;
-  font-size: 13px;
-">
-  <a href="#" style="color:#0070ba; text-decoration:none; margin-right:15px;">Help & Contact</a>
+                              <table width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #cccccc; padding-top:25px;">
+  <tr>
+    <td style="font-size:13px; font-family:Arial, sans-serif;">
 
-  <span style="color:#999; margin-right:15px;">|</span>
+      <a href="#" style="color:#0070ba; text-decoration:none;">Help & Contact</a>
+      <span style="color:#999; padding:0 10px;">|</span>
 
-  <a href="#" style="color:#0070ba; text-decoration:none; margin-right:15px;">Security</a>
+      <a href="#" style="color:#0070ba; text-decoration:none;">Security</a>
+      <span style="color:#999; padding:0 10px;">|</span>
 
-  <span style="color:#999; margin-right:15px;">|</span>
+      <a href="#" style="color:#0070ba; text-decoration:none;">Apps</a>
 
-  <a href="#" style="color:#0070ba; text-decoration:none;">Apps</a>
-</div>
+      <!-- Instagram icon -->
+      <span style="padding-left:15px;">
+        <a href="#">
+          <img
+            src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
+            width="14"
+            height="14"
+            alt="Instagram"
+            style="display:inline-block; vertical-align:middle; border:0;"
+          >
+        </a>
+      </span>
+
+    </td>
+  </tr>
+</table>
+
                                 
                                 <!-- Social Icons -->
                                 <div style="margin-bottom: 30px;">
