--- a/index.html
+++ b/index.html
@@ -466,9 +466,9 @@
    </div>
                                 
                                 <!-- Footer Links -->
-                              <table width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #cccccc; padding-top:25px;">
+                          <table width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #cccccc; padding-top:25px;">
   <tr>
-    <td style="font-size:13px; font-family:Arial, sans-serif;">
+    <td style="font-size:13px; font-family:Arial, sans-serif; vertical-align:middle;">
 
       <a href="#" style="color:#0070ba; text-decoration:none;">Help & Contact</a>
       <span style="color:#999; padding:0 10px;">|</span>
@@ -478,22 +478,21 @@
 
       <a href="#" style="color:#0070ba; text-decoration:none;">Apps</a>
 
-      <!-- Instagram icon -->
-      <span style="padding-left:15px;">
-        <a href="#">
-          <img
-            src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
-            width="14"
-            height="14"
-            alt="Instagram"
-            style="display:inline-block; vertical-align:middle; border:0;"
-          >
-        </a>
-      </span>
+      <!-- Instagram icon (only this one, properly aligned) -->
+      <a href="#" style="padding-left:15px; display:inline-block; vertical-align:middle;">
+        <img
+          src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg"
+          width="16"
+          height="16"
+          alt="Instagram"
+          style="display:inline-block; vertical-align:middle; border:0;"
+        >
+      </a>
 
     </td>
   </tr>
 </table>
+
 
                                 
                                 <!-- Social Icons -->
