--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
    </div>
                                 
                                 <!-- Footer Links -->
-                          <table width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #cccccc; padding-top:25px;">
+        <table width="100%" cellpadding="0" cellspacing="0" style="border-top:1px solid #cccccc; padding-top:25px;">
   <tr>
     <td style="font-size:13px; font-family:Arial, sans-serif; vertical-align:middle;">
 
@@ -478,20 +478,30 @@
 
       <a href="#" style="color:#0070ba; text-decoration:none;">Apps</a>
 
-      <!-- Instagram icon (only this one, properly aligned) -->
-      <a href="#" style="padding-left:15px; display:inline-block; vertical-align:middle;">
-        <img
-          src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg"
-          width="16"
-          height="16"
-          alt="Instagram"
-          style="display:inline-block; vertical-align:middle; border:0;"
-        >
-      </a>
+      <!-- Social icons aligned in one line -->
+      <span style="padding-left:20px;">
+        <a href="#" style="display:inline-block; vertical-align:middle; margin-right:8px;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" 
+               width="16" height="16" alt="Facebook" style="display:inline-block; vertical-align:middle; border:0;">
+        </a>
+        <a href="#" style="display:inline-block; vertical-align:middle; margin-right:8px;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/X_logo_2023.svg" 
+               width="16" height="16" alt="X" style="display:inline-block; vertical-align:middle; border:0;">
+        </a>
+        <a href="#" style="display:inline-block; vertical-align:middle; margin-right:8px;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" 
+               width="16" height="16" alt="LinkedIn" style="display:inline-block; vertical-align:middle; border:0;">
+        </a>
+        <a href="#" style="display:inline-block; vertical-align:middle;">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" 
+               width="16" height="16" alt="Instagram" style="display:inline-block; vertical-align:middle; border:0;">
+        </a>
+      </span>
 
     </td>
   </tr>
 </table>
+
 
 
                                 
