--- a/index.html
+++ b/index.html
@@ -484,41 +484,47 @@
 
 
 
-
-                                
-                              <!-- Social Icons Table -->
-<table cellpadding="0" cellspacing="0" border="0" style="margin-bottom:30px;">
+<!-- PayPal Style Social Icons -->
+<table cellpadding="0" cellspacing="0" border="0" align="center" style="margin-bottom:30px;">
   <tr>
-    <!-- X / Twitter -->
-    <td style="padding-right:10px;">
+
+    <!-- Twitter / X -->
+    <td style="padding-right:12px;">
       <table cellpadding="0" cellspacing="0" border="0">
         <tr>
           <td width="40" height="40" bgcolor="#707070" align="center" valign="middle" style="border-radius:50%;">
-            <span style="color:#ffffff; font-size:20px; font-weight:bold; font-family:Arial, sans-serif;">𝕏</span>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/X_logo_2023_white.svg"
+                 width="16" height="16"
+                 alt="X"
+                 style="display:block; border:0;">
           </td>
         </tr>
       </table>
     </td>
 
-   <!-- Instagram -->
-<td style="padding-right:10px;">
-  <table cellpadding="0" cellspacing="0" border="0">
-    <tr>
-      <td width="40" height="40" bgcolor="#707070" align="center" valign="middle" style="border-radius:50%;">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/e/e7/Instagram_logo_2016.svg" 
-             width="20" height="20" style="display:block; border:0;" alt="Instagram" />
-      </td>
-    </tr>
-  </table>
-</td>
-
-
-    <!-- Facebook -->
-    <td style="padding-right:10px;">
+    <!-- Instagram -->
+    <td style="padding-right:12px;">
       <table cellpadding="0" cellspacing="0" border="0">
         <tr>
           <td width="40" height="40" bgcolor="#707070" align="center" valign="middle" style="border-radius:50%;">
-            <span style="color:#ffffff; font-size:24px; font-weight:bold; font-family:Arial, sans-serif;">f</span>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png"
+                 width="18" height="18"
+                 alt="Instagram"
+                 style="display:block; border:0; filter:brightness(0) invert(1);">
+          </td>
+        </tr>
+      </table>
+    </td>
+
+    <!-- Facebook -->
+    <td style="padding-right:12px;">
+      <table cellpadding="0" cellspacing="0" border="0">
+        <tr>
+          <td width="40" height="40" bgcolor="#707070" align="center" valign="middle" style="border-radius:50%;">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1b/Facebook_icon.svg"
+                 width="16" height="16"
+                 alt="Facebook"
+                 style="display:block; border:0; filter:brightness(0) invert(1);">
           </td>
         </tr>
       </table>
@@ -529,11 +535,15 @@
       <table cellpadding="0" cellspacing="0" border="0">
         <tr>
           <td width="40" height="40" bgcolor="#707070" align="center" valign="middle" style="border-radius:50%;">
-            <span style="color:#ffffff; font-size:18px; font-weight:bold; font-family:Arial, sans-serif;">in</span>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png"
+                 width="16" height="16"
+                 alt="LinkedIn"
+                 style="display:block; border:0; filter:brightness(0) invert(1);">
           </td>
         </tr>
       </table>
     </td>
+
   </tr>
 </table>
 
