--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                                     <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
                                         <span style="color: #ffffff; font-size: 22px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">𝕏</span>
                                     </a>
-                                  <!-- Instagram -->
+                              <!-- Instagram -->
 <a href="#"
    style="
      display:inline-block;
@@ -494,16 +494,38 @@
      height:40px;
      background-color:#707070;
      border-radius:50%;
-     text-align:center;
-     line-height:40px;
+     position:relative;
      text-decoration:none;
      margin-right:15px;
      vertical-align:middle;
-     font-family:Arial, Helvetica, sans-serif;
-     font-size:18px;
-     color:#ffffff;
    ">
-  ⌁
+
+  <!-- Camera body -->
+  <span style="
+     position:absolute;
+     top:10px;
+     left:10px;
+     width:20px;
+     height:20px;
+     border:2px solid #ffffff;
+     border-radius:4px;
+     box-sizing:border-box;
+     display:block;
+  "></span>
+
+  <!-- Camera lens -->
+  <span style="
+     position:absolute;
+     top:15px;
+     left:15px;
+     width:10px;
+     height:10px;
+     border:2px solid #ffffff;
+     border-radius:50%;
+     box-sizing:border-box;
+     display:block;
+  "></span>
+
 </a>
 
                                     <!-- Facebook -->
