--- a/index.html
+++ b/index.html
@@ -484,10 +484,27 @@
                                     <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
                                         <span style="color: #ffffff; font-size: 22px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">𝕏</span>
                                     </a>
-                                    <!-- Instagram -->
-                                    <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 38px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
-                                        <span style="color: #ffffff; font-size: 22px;">📷</span>
-                                    </a>
+                                   <!-- Instagram -->
+<a href="#"
+   style="
+     display:inline-block;
+     width:40px;
+     height:40px;
+     background-color:#707070;
+     border-radius:50%;
+     text-align:center;
+     line-height:40px;
+     text-decoration:none;
+     margin-right:15px;
+     vertical-align:middle;
+     font-family:Arial, Helvetica, sans-serif;
+     font-size:14px;
+     font-weight:bold;
+     color:#ffffff;
+   ">
+  IG
+</a>
+
                                     <!-- Facebook -->
                                     <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
                                         <span style="color: #ffffff; font-size: 26px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">f</span>
