--- a/index.html
+++ b/index.html
@@ -481,24 +481,34 @@
                                 </div>
                                 
                                 <!-- Social Icons -->
-                                <div style="margin-bottom: 30px;">
-                                    <!-- Twitter -->
-                                    <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
-                                        <span style="color: #ffffff; font-size: 22px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">𝕏</span>
-                                    </a>
-                                    <!-- Instagram -->
-                                    <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
-                                        <span style="color: #ffffff; font-size: 18px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">IG</span>
-                                    </a>
-                                    <!-- Facebook -->
-                                    <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; margin-right: 15px; vertical-align: middle;">
-                                        <span style="color: #ffffff; font-size: 26px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">f</span>
-                                    </a>
-                                    <!-- LinkedIn -->
-                                    <a href="#" style="display: inline-block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none; vertical-align: middle;">
-                                        <span style="color: #ffffff; font-size: 18px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">in</span>
-                                    </a>
-                                </div>
+                                <table cellpadding="0" cellspacing="0" border="0" style="margin-bottom: 30px;">
+                                    <tr>
+                                        <!-- Twitter -->
+                                        <td style="padding-right: 15px;">
+                                            <a href="#" style="display: block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none;">
+                                                <span style="color: #ffffff; font-size: 22px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">𝕏</span>
+                                            </a>
+                                        </td>
+                                        <!-- Instagram -->
+                                        <td style="padding-right: 15px;">
+                                            <a href="#" style="display: block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none;">
+                                                <span style="color: #ffffff; font-size: 18px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">IG</span>
+                                            </a>
+                                        </td>
+                                        <!-- Facebook -->
+                                        <td style="padding-right: 15px;">
+                                            <a href="#" style="display: block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none;">
+                                                <span style="color: #ffffff; font-size: 26px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">f</span>
+                                            </a>
+                                        </td>
+                                        <!-- LinkedIn -->
+                                        <td>
+                                            <a href="#" style="display: block; width: 40px; height: 40px; background-color: #707070; border-radius: 50%; text-align: center; line-height: 40px; text-decoration: none;">
+                                                <span style="color: #ffffff; font-size: 18px; font-weight: 900; font-family: Arial Black, Arial, sans-serif;">in</span>
+                                            </a>
+                                        </td>
+                                    </tr>
+                                </table>
                                 
                                 <!-- Footer Text -->
                                 <div style="font-size: 11px; color: #666; line-height: 1.6; margin-bottom: 15px;">
