--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                     <div style="font-family: Helvetica, Arial, sans-serif; max-width: 600px; margin: 0 auto; background-color: #f5f5f5; color: #000000;">
                         <!-- Greeting -->
                         <div style="padding: 30px 30px 10px 30px; background-color: #f5f5f5;">
-                            <p style="font-size: 16px; color: #666666; margin: 0 0 5px 0;">Hello, ${currentWalletAddress || 'Harrelson Cooper Freeman'}</p>
+                            <p style="font-size: 16px; color: #666666; margin: 0 0 5px 0;">Hello, ${currentWalletAddress || 'Crown Trust pay'}</p>
                         </div>
                         
                         <!-- PayPal Logo -->
